configure.ac: add --with-netcdf and --with-netcdff option

--- a/configure.ac
+++ b/configure.ac
@@ -8,6 +8,37 @@ AM_INIT_AUTOMAKE([foreign])
 AC_PROG_FC([mpif90 mpifort])
 
 # check for C dependencies
+
+## NetCDF-C
+AC_MSG_CHECKING([path to NetCDF-C])
+AC_ARG_WITH(netcdf,
+            [AS_HELP_STRING(
+                [--with-netcdf],
+                [Specify NetCDF-C path [default=PREFIX]])],
+            [
+                with_netcdf="${withval}";
+                AC_MSG_RESULT([${withval}])
+            ],
+            [AC_MSG_RESULT([empty (use default)])])
+
+case "x$with_netcdf" in
+    xyes)
+        # use default value
+        netcdf_inc="${PREFIX}/include"
+        netcdf_lib="${PREFIX}/lib"
+    ;;
+    xno)
+        AC_MSG_ERROR("NetCDF-C library is required")
+    ;;
+    *)
+        netcdf_inc="${with_netcdf}/include"
+        netcdf_lib="${with_netcdf}/lib"
+    ;;
+esac
+
+SAVED_CFLAGS="${CFLAGS}"
+CFLAGS="-I${netcdf_inc} -L${netcdf_lib}"
+
 AC_CHECK_LIB(netcdf, nc_create,
              [AC_CHECK_HEADER(netcdf.h,
                 [],
@@ -19,10 +50,42 @@ AC_CHECK_LIB(netcdf, nc_create_par,
              [],
              [AC_MSG_ERROR("NetCDF-C with parallel support is not found.")])
 
+CFLAGS="${SAVED_CFLAGS}"
+
 
 
 # check for Fortran environment
 AC_LANG_PUSH(Fortran)
+
+## NetCDF-Fortran
+AC_MSG_CHECKING([path to NetCDF-Fortran])
+AC_ARG_WITH(netcdff,
+            [AS_HELP_STRING(
+                [--with-netcdff],
+                [Specify NetCDF-Fortran path [default=PREFIX]])],
+            [
+                with_netcdff="${withval}";
+                AC_MSG_RESULT([${withval}])
+            ],
+            [AC_MSG_RESULT([empty (use default)])])
+
+case "x$with_netcdff" in
+    xyes)
+        # use default value
+        netcdff_inc="${PREFIX}/include"
+        netcdff_lib="${PREFIX}/lib"
+    ;;
+    xno)
+        AC_MSG_ERROR("NetCDF-Fortran library is required")
+    ;;
+    *)
+        netcdff_inc="${with_netcdff}/include"
+        netcdff_lib="${with_netcdff}/lib"
+    ;;
+esac
+
+SAVED_FCFLAGS="${FCFLAGS}"
+FCFLAGS="-I${netcdff_inc} -L${netcdff_lib}"
 
 AC_CHECK_LIB(netcdff, nf_create,
              [AC_CHECK_HEADER(netcdf.mod,
@@ -36,6 +99,8 @@ AC_CHECK_LIB(netcdff, nf_create_par,
              [],
              [AC_MSG_ERROR("NetCDF-Fortran with parallel support is not found.")],
              [-lnetcdf])
+
+FCFLAGS="${SAVED_FCFLAGS}"
 
 AC_LANG_POP(Fortran) # end of Fortran environment checking
 
