--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,14 +1,23 @@
 bin_PROGRAMS = LESBENCHMARK
 
 LESBENCHMARK_SOURCES =          \
-	module_var_output.f90       \
-	module_param_namelist.f90   \
-	module_mpi.f90              \
-	module_read_namelist.f90    \
+	main.f90                    \
 	module_allocate_memory.f90  \
 	module_benchmark_core.f90   \
+	module_mpi.f90              \
 	module_output.f90           \
-	main.f90
+	module_param_namelist.f90   \
+	module_read_namelist.f90    \
+	module_var_output.f90
 
 LESBENCHMARK_LDADD = @NETCDFF_LIBS@ @NETCDF_LIBS@
 AM_FCFLAGS = @NETCDFF_CFLAGS@ @NETCDF_CFLAGS@
+
+main.o : main.f90 module_output.o module_benchmark_core.o module_allocate_memory.o module_var_output.o module_read_namelist.o module_mpi.o
+module_allocate_memory.o : module_allocate_memory.f90 module_param_namelist.o module_var_output.o module_mpi.o
+module_benchmark_core.o : module_benchmark_core.f90 module_mpi.o module_var_output.o module_param_namelist.o
+module_mpi.o : module_mpi.f90 module_param_namelist.o
+module_output.o : module_output.f90 module_mpi.o module_param_namelist.o
+module_param_namelist.o : module_param_namelist.f90
+module_read_namelist.o : module_read_namelist.f90 module_mpi.o module_param_namelist.o
+module_var_output.o : module_var_output.f90
